# slidecraft

./: .gitattributes  .gitignore  .gitleaks.toml  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CODE_SIGNING_POLICY.md  CONTRIBUTING.md  DETAILED_DESIGN.md  DIAGRAM_PIPELINE_SPEC.md  DesktopApp_DevelopmentDesign.md  HOW_TO_USE.md  LICENSE  NAMING_CONVENTION.md  NOTICE  PROJECT_SPEC.md  README.en.md  README.ja.md  README.md  RELEASING.md  REVIEW.md  SECURITY.md  SKILL.md  THIRD-PARTY-NOTICES.en.md  THIRD-PARTY-NOTICES.md  eslint.config.js  index.html  package-lock.json  package.json  playwright.config.ts  requirements.txt  tsconfig.app.json  tsconfig.mcp.json  vite.config.ts
.claude/: memory.md  settings.json
.githooks/: pre-push
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
docs/: DesktopApp_DevelopmentDesign.md  MarkdownToPptx_Design.md  ROADMAP.md  TEMPLATE.md  changelog.md  index.md  mcp-server.md  p2-collab-design.md  shipped.md  user-guide.md
examples/: README.md  sample-deck.md
samples/: README.md  deck-01-mixed-layouts.md  deck-02-diagrams.md  deck-03-report-charts.md  deck-04-stress-edgecases.md  manuscript-01-business-proposal.md  manuscript-02-tech-report.md  manuscript-03-howto-guide.md  manuscript-04-meeting-notes.md  sample-deck.md
scripts/: add-body-bullet-style.ts  add-section-nav-list-layout.ts  arch-census.ts  bump-version.mjs  diagram-golden.ts  extract-changelog-section.mjs  make-dirty-fixture-2.ts  make-dirty-fixture.ts  make-test-templates.ts  parse-audit.ts  patch-midnight-title-backdrops.mjs  pathology-census.ts  rebuild-template.ts  sanitize-master.ts  setup-hooks.mjs  slidecraft-mcp  stage-llamafile.mjs  stage-node.mjs  stage-node.ps1  strip-to-template.mjs  tauri-dev-wsl.sh  update-cask.mjs  verify-cask.mjs  windows-setup.ps1
src/: App.tsx  create_30_layouts.py  diagram_cli.py  diagram_icons.py  diagram_renderer.py  diagram_schema.py  diagram_theme.py  index.css  main.tsx  sample-deck.ts
src-tauri/: Cargo.toml  tauri.bundle.conf.json  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: collab.rs  file_open.rs  lib.rs  local_ai.rs  main.rs  model_tier.rs  secret_store.rs
tests/: ai-apply-reconcile.test.ts  ai-apply.test.ts  ai-connection.test.ts  ai-local-only.test.ts  ai-reconcile.test.ts  ai-validate-precision.test.ts  ai-validate.test.ts  alien-template.test.ts  apply-field-edit.test.ts  apply-remake-ai.test.ts  apply-routing.test.ts  apply-template-repair.test.ts  apply-template.test.ts  arch-census.test.ts  arch-conformance.test.ts  authoring-contract-digest.test.ts  authoring-contract-roundtrip.test.ts  authoring-guide.test.ts  batch-warn.test.ts  binding-chrome-gate.test.ts  binding-diagnostics.test.ts  binding-plan.test.ts  (+215 more)
(+309 files in other folders)
