[package]
name = "diagram-pipeline-desktop"
version = "0.1.0"
edition = "2021"

[lib]
name = "diagram_pipeline_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-http = "2"
tauri-plugin-fs = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# Streaming model-weights download (rustls = pure-Rust TLS, no system OpenSSL) + SHA256 verify.
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "stream"] }
sha2 = "0.10"
# OS keychain for the BYOK API key (ADR-0016 F3): Windows Credential Manager / macOS Keychain /
# Linux Secret Service. Pure-Rust features (crypto-rust + zbus) so it builds without system dev libs;
# when no backend is present the commands error and the webview falls back to localStorage.
keyring = { version = "3", default-features = false, features = ["apple-native", "windows-native", "sync-secret-service", "crypto-rust"] }
